Change log for zeit.web
=======================

2.63 (unreleased)
-----------------

- Polish article citation blocks for campus

- ZON-2391: Improve reply-toggle performance

- ZON-2826: Implement rawtext module for articles and CPs

- ZON-2874: Customize article citation blocks for campus


2.62 (2016-03-04)
-----------------

- ZON-2433: Improve sharing logic of cardstacks

- ZON-2839: Add ZEIT Campus article pagination

- ZON-2523: Add campus framebuilder

- ZON-2782: Refactor ZMO article image macro to dedicated template

- ZON-2835: Move blocks from site macros to template files in core.
            Create ZEIT Campus article blocks

- BUG-361: Support dates with timezones in community-maintenance.xml

- BUG-348: Sanitize webtrekk content id
           (Sanitizing now keeps `-`, since some ressort use that)

- FIX: Refresh contents of advertisement-nextread folder, so we don't access
       content that was retracted while the nextread folder was cached

- FIX: Remove superfluous and misleading interfaces from content objects that
       have no content type (due to missing or broken meta files).

- MAINT: Ensure stable return type for nextreads and comment counts

- MAINT: Be more defensive about errors when talking to the community


2.61.2 (2016-03-02)
-------------------

- HOTFIX: Don't display error message to non-authenticated users


2.61.1 (2016-03-02)
-------------------

- HOTFIX: Return valid user info from session


2.61 (2016-03-02)
-----------------

- ZON-2834: Introduce article header for ZEIT Campus

- FIX: Display proper error message to blocked users

- ZON-2808: Remove contact address from error message for blocked users

- MAINT: Introduce `request.user` object, created once per request

- MAINT: Switch default testbrowser to wsgi, add template browser and
         clean lots(!) of tests with testserver.url and inappropriate fixtures


2.60 (2016-02-29)
-----------------

- BUG-360: Invalidate sessions with uid=0 immediately
